adding range chart

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
               </table>
               <div id="trips-over-time-chart"></div>
           </span>
+          <span class="col-xs-12">
+            <div id="minutes-on-bike-chart"></div>
+          </span>
         </div>
         <div class="row" style="padding-top: 20px;">
             <span class="col-xs-4">
