--- a/index.html
+++ b/index.html
@@ -3,36 +3,47 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF8">
   
-  <title>Elasticsearch Visualizations</title>
+  <title>Divvy Data Dashboard</title>
 
   <link rel="stylesheet" type="text/css" href="bower_components/dcjs/dc.css"/>
   <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
+  <link rel="stylesheet" type="text/css" href="bower_components/nprogress/nprogress.css"/>
+  <style>
+    #chart-container {
+      display: none;
+    }
+
+    #initial-loading-message span {
+      text-align: center;
+    }
+  </style>
 
   <script type="text/javascript" src="bower_components/jquery/jquery.js"></script>
   <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
   <script type="text/javascript" src="bower_components/lodash/dist/lodash.js"></script>
-  <script type="text/javascript" src="bower_components/d3/d3.js"></script>
-  <script type="text/javascript" src="bower_components/crossfilter/crossfilter.js"></script>
-  <script type="text/javascript" src="bower_components/dcjs/dc.js"></script>
-
-  <script type="text/javascript" src="src/js/app.js"></script>
 </head>
 <body>
-    <div class="container">
-      <div class="row" style="padding-top: 20px;">
-            <span class="col-xs-12">
-                <table>
-                    <tr>
-                        <td>
-                            <img src="images/Divvy_Logo.svg" width="100" style="padding-top: 4px;"/>
-                        </td>
-                        <td>
-                            <h2 style="padding-left: 10px;">Ride Explorer</h2>
-                        </td>
-                    </tr>
-                </table>
-            </span>
-        </div>
+  <div class="container">
+    <div class="row" style="padding-top: 20px;">
+          <span class="col-xs-12">
+              <table>
+                  <tr>
+                      <td>
+                          <img src="images/Divvy_Logo.svg" width="100" style="padding-top: 4px;"/>
+                      </td>
+                      <td>
+                          <h2 style="padding-left: 10px;">Ride Dashboard</h2>
+                      </td>
+                  </tr>
+              </table>
+          </span>
+      </div>
+      <div class="row" style="padding-top: 20px;" id="initial-loading-message">
+        <span class="col-xs-12">
+          <h4>Loading data, slicing and dicing...</h4>
+        </span>
+      </div>
+      <span id="chart-container">
         <div class="row" style="padding-top: 10px;">
           <span class="col-xs-12">
               <table>
@@ -80,5 +91,11 @@
                 <div id="trip-duration-chart"></div>
             </span>
         </div>
-    </div>
+      </span>
+  </div>
+  <script type="text/javascript" src="bower_components/d3/d3.js"></script>
+  <script type="text/javascript" src="bower_components/crossfilter/crossfilter.js"></script>
+  <script type="text/javascript" src="bower_components/dcjs/dc.js"></script>
+  <script type="text/javascript" src="bower_components/nprogress/nprogress.js"></script>
+  <script type="text/javascript" src="src/js/app.js"></script>
 </body>
