--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                           <img src="images/Divvy_Logo.svg" width="100" style="padding-top: 4px;"/>
                       </td>
                       <td>
-                          <h2 style="padding-left: 10px;">Ride Dashboard</h2>
+                          <h2 style="padding-left: 10px;">Data Dashboard</h2>
                       </td>
                   </tr>
               </table>
@@ -139,10 +139,10 @@
             <a href="http://divvybikes.com">Divvy</a> is a bike sharing system in Chicago that makes thousands of bikes available for rent at various locations throughout the city.  Each station has a touchscreen kiosk and a docking system that releases bikes using a membership key or a ride code. 
           </p>
           <p class="col-xs-12">
-            In early 2014, Divvy released a data feed of the nearly <strong>760,000</strong> rides taken on Divvy bikes in its inaugural year of 2013. This was part of the <a href="https://www.divvybikes.com/data">Divvy Data Challenge</a>.  Unfortunately, <a href="http://spantree.net">Spantree</a> was heads down working on a few client projects during the challnege and didn't get a chance to compete, but we later took the opportunity to incorporate Divvy data into our <a href="https://github.com/Spantree/elasticsearch-talk">Elasticsearch Workshop</a>. We loved playing with the data so much that we decided to also create this data visualization demo powered by <a href="http://http://d3js.org/">D3.js</a>, <a href="http://square.github.io/crossfilter/">Crossfilter</a>, <a href="http://dc-js.github.io/dc.js/">dc.js</a> and <a href="http://coffeescript.com/">Coffeescript</a>. It works best in <a href="http://www.google.com/chrome"/>Chrome</a>.  All source code is available on <a href="https://github.com/Spantree/divvy-dashboard">Github</a>.
+            In early 2014, Divvy released a data feed of the nearly <strong>760,000</strong> rides taken on Divvy bikes in its inaugural year of 2013. This was part of the <a href="https://www.divvybikes.com/data">Divvy Data Challenge</a>.  Unfortunately, <a href="http://spantree.net">Spantree</a> was heads down working on a few client projects during the challnege and didn't get a chance to compete, but we later took the opportunity to incorporate Divvy data into our <a href="https://github.com/Spantree/elasticsearch-talk">Elasticsearch Workshop</a>. We loved playing with the data so much that we decided to also create this data visualization demo powered by <a href="http://http://d3js.org/">D3.js</a>, <a href="http://square.github.io/crossfilter/">Crossfilter</a>, <a href="http://dc-js.github.io/dc.js/">dc.js</a> and <a href="http://coffeescript.com/">Coffeescript</a>. It works best in <a href="http://www.google.com/chrome"/>Google Chrome</a>.  All source code is available on <a href="https://github.com/Spantree/divvy-dashboard">Github</a>.
           </p>
           <p class="col-xs-12" id="instructions">
-            The graphs you see below are entirely interactive. Data is loaded directly into the browser as a CSV and all the processing and filtering takes place completely in the browser as well. Some filters are still a little slow, but feel free to drill into the various dimensions and learn how Chicago fell in love with these little blue bicycles.
+            The graphs you see below are entirely interactive. Data is loaded directly into the browser as a CSV and all the processing and filtering takes place completely in the browser as well. Due to the amount of data, some filters are still a little slow. But feel free to drill into the various dimensions and learn how Chicago fell in love with these little blue bicycles.
           </p>
         </div>
       <div class="row" id="initial-loading-message">
